@@ -1,3 +1,13 @@
+2003-02-19  James Henstridge  <james@daa.com.au>
+
+	* gtk-doc.spec.in (Requires): make the requires lines match
+	current requirements ...
+
+	* gtkdoc-mkhtml.in (XSLTPROC): pass --nonet to xsltproc, so we
+	don't try to download DTDs and XSLT over the net.  The configure
+	checks should catch people who don't have the correct files in
+	their catalog.
+
 2003-02-17  James Henstridge  <james@daa.com.au>
 
 	* gtkdocize.in (--version): add --version argument.
